fix: fix bg and a

--- a/index.html
+++ b/index.html
@@ -35,32 +35,32 @@
         <img class="cat" src="img/bg/kot-glaza-usy.jpg" alt="cat" />
         <section class="add-info">
           <div class="days row">
-            <div class="day__value"></div>
+            <div class="day__value value"></div>
           </div>
           <div class="time row">
-            <div class="time__value"></div>
+            <div class="time__value value"></div>
           </div>
           <div class="temperature row">
             <i class="fas fa-thermometer-three-quarters"></i>
-            <div class="temperature__value"></div>
+            <div class="temperature__value value"></div>
           </div>
           <div class="wind row">
             <i class="fas fa-wind"></i>
-            <div class="wind__value"></div>
+            <div class="wind__value value"></div>
           </div>
           <div class="humidity row">
             <i class="fas fa-tint"></i>
-            <div class="humidity__value"></div>
+            <div class="humidity__value value"></div>
           </div>
           <div class="presssure row">
             <i class="fas fa-tachometer-alt"></i>
-            <div class="pressure__value"></div>
+            <div class="pressure__value value"></div>
           </div>
         </section>
+        <footer class="footer">
+          <h4>Private production Elizabettth.</h4>
+        </footer>
       </main>
-      <footer class="footer">
-        <h4>Private production Elizabettth.</h4>
-      </footer>
     </div>
     <script src="https://kit.fontawesome.com/972d061ba9.js" crossorigin="anonymous"></script>
   </body>
